FIX: music player songs and covers

--- a/memory-keeper/src/components/player/Player.css
+++ b/memory-keeper/src/components/player/Player.css
@@ -2,14 +2,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-width: 350px;
 }
 
 .track-list {
     display: flex;
     gap: 1.5rem;
-    overflow-x: auto;
     padding: 1rem;
     flex-direction: column;
+    width: 100%;
 }
 
 .track-item {
@@ -17,6 +18,11 @@
     align-items: center;
     cursor: pointer;
     transition: transform 0.2s ease, opacity 0.2s ease;
+    width: 100%;
+    background-color: #202020;
+    padding: 10px;
+    margin-left: -10px;
+    border-radius: 10px;
 }
 
 .track-item:hover {
@@ -34,6 +40,7 @@
     border-radius: 12px;
     object-fit: cover;
     box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.4);
+    margin-right: 20px;
 }
 
 .track-title {
